--- a/css/index.css
+++ b/css/index.css
@@ -13,20 +13,19 @@ body{
 
     font-family: Verdana;
 }
+
+#xp_bar {
+    background: url('img/xp-bar.png');
+    height: 68px;
+}
 #container{
     top: 50%;
     left: 0;
     width: 100%;
 }
 #wrapper{
-    padding:30px;
-    margin-left:auto;
-    margin-right:auto;
-	height:532px;
-    width:832px;
-    background-color:#0c0909;
-    border: 4px solid #2c1c0e;
-    border-radius: 10px;
+    height:100%;
+    background: gray;
 }
 #wrapper-character{
     padding:30px;
@@ -192,21 +191,17 @@ color:	#686868;
     font-size: 18px;
     width:100px;
 }
-.odd{
-    background: #f2f2f2;
-}
-.even{
-    background: #f9f9f9;
-}
 .enter_code{
 	color:black !important;
 	height:24px !important;
 	background-color:#C3C3C2 !important;
-		
-	
 }
 .progress {
 	background-color:transparent !important;
+}
+
+.progress-bar {
+    width: 50%;height: 15px;margin-top: 6px;border-radius: 6px;
 }
 
 .info, .success, .warning, .error, .validation {
@@ -221,12 +216,10 @@ z-index:10000;
 .success {
 color: #4F8A10;
 background-color: #DFF2BF;
-//background-image:url('success.png');
 }
 .error {
 color: #D8000C;
 background-color: #FFBABA;
-//background-image: url('error.png');
 }
 .form_input{
 	height: 45px;
