--- a/css/overridebootstrap.css
+++ b/css/overridebootstrap.css
@@ -1,3 +1,10 @@
+@media (min-width: 768px) {
+  .row.equal {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .well.register {
 	width: 400px;
 	margin: 0 auto;
