--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,44 @@ body{
     font-family: Verdana;
 }
 
+.hidden {
+    display: none;
+}
+.character-card {
+    border-radius: 4px;
+    border-color: #000;
+    border-color: rgba(0,0,0,.4);
+    border-style: solid;
+    background-size: cover;
+    background-color: rgba(51,51,51,);
+    width: 250px;
+}
+
+.hero-card-header {
+    text-transform: uppercase;
+    color: #d3d3d3;
+    font-size: 18px;
+    display: inline-block;
+    min-height: 31px;
+    padding: 9px 10px 4px;
+}
+
+.character-card img {
+    width: 100%;
+}
+
+.character-card .hero-description {
+    position:absolute;
+    background: rgba(0,0,0,0.8);
+    display: none;
+    bottom: 0;
+    left: 0;
+}
+
+.character-card.active-hero .hero-description {
+    display: block;
+}
+
 #container{
     top: 50%;
     left: 0;
@@ -27,12 +65,6 @@ body{
 }
 #wrapper-character{
     padding:30px;
-    margin-left:auto;
-    margin-right:auto;
-    width:832px;
-    background-color:#0c0909;
-    border: 4px solid #2c1c0e;
-    border-radius: 10px;
 }
 .fixed-width {
 width: 300px !important;
@@ -255,4 +287,15 @@ background-color: #FFBABA;
     display: flex;
     flex-wrap: wrap;
   }
+}
+
+.btn.block {
+    border-radius: 0 !important;
+}
+
+.block {
+    display:block;
+}
+.full-width {
+    width: 100%;
 }
