--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,6 @@ body{
     background-color:#000000 !important;
     background:url(../img/background.jpg) top center no-repeat;
     color: #fff;
-
     font-family: Verdana;
 }
 
@@ -23,7 +22,7 @@ body{
     border-color: rgba(0,0,0,.4);
     border-style: solid;
     background-size: cover;
-    background-color: rgba(51,51,51,);
+    background-color: rgba(51,51,51, 1);
     width: 250px;
 }
 
