--- a/css/teacherview.css
+++ b/css/teacherview.css
@@ -1,3 +1,8 @@
+body {
+	background: none !important;
+	background-color: #c1c1c1 !important;
+}
+
 div.skill-preview {
 	border-radius: 10px;
 	padding: 10px;
