--- a/css/overridebootstrap.css
+++ b/css/overridebootstrap.css
@@ -5,6 +5,44 @@
   }
 }
 
+td.text-left, 
+th.text-left {
+    text-align: left;
+}
+
+tr:nth-child(odd) td {
+    background: #EBEBEB;
+}
+
+th:first-child {
+    border-top-left-radius: 3px;
+}
+
+.table th {
+	color: #D5DDE5;
+    background: #1b1e24;
+    border-bottom: 4px solid #9ea7af;
+    border-right: 1px solid #343a45;
+    font-size: 23px;
+    font-weight: 100;
+    padding: 24px;
+    text-align: left;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    vertical-align: middle;
+}
+
+.table td {
+	background: #FFFFFF;
+    padding: 20px;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 300;
+    font-size: 18px;
+    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+    border-right: 1px solid #C1C3D1;
+}
+
+
 .well.register {
 	width: 400px;
 	margin: 0 auto;
