--- a/css/index.css
+++ b/css/index.css
@@ -234,11 +234,11 @@ color:	#686868;
     width:100px;
 }
 .progress {
-	background-color:transparent !important;
+	background-color:rgba(255,255,255,0.2) !important;
 }
 
 .progress-bar {
-    width: 50%;height: 15px;margin-top: 6px;border-radius: 6px;
+    width: 50%;border-radius: 6px;
 }
 
 .info, .success, .warning, .error, .validation {
